utils/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-namespace-ingress
  namespace: linkding
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow ingress traffic within the namespace
    - from:
        - podSelector: {}
